modify jumbotron-myyp colors

--- a/css/main.css
+++ b/css/main.css
@@ -22,7 +22,7 @@ body, button, html, input, select, textarea {
 }
 
 .jumbotron-myyp {
-	background-color: #fddd80 !important;	
+	background-color: #ffc90e !important;	
 }
 
 .jumbotron-bugs {
