add home and move index to bookmarks

--- a/css/main.css
+++ b/css/main.css
@@ -18,7 +18,7 @@ body, button, html, input, select, textarea {
 }
 
 .jumbotron-bugs {
-	background-color: #9e4747 !important;
+	background-color: #851818 !important;
 }
 
 .jumbotron-myyp {
