--- a/css/hosptech.css
+++ b/css/hosptech.css
@@ -30,21 +30,70 @@ body, button, html, input, select, textarea {
 	background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(250, 250, 250, 1)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
 }
 
+.jumbotron {
+	border-radius: 0px;
+	margin: 0;
+}
+
+.jumbotron h1 {
+	color: #fff;
+}
+
+/* styles for topic area */
+#self-intro {
+	background-color: #cfe1ff;
+}
+
 .jumbotron-topic {
 	padding-top: 150px;
 	padding-bottom: 60px;
 	background-color: #2f5597 !important;
-	border-radius: 0px;
 }
 
 .jumbotron-topic h1 {
 	font-size: 48px;
 	padding-bottom: 20px;
-	color: #fff;
 }
 
 .jumbotron-topic p {
 	color: #90addf;
+}
+
+.topic-outline {
+	padding: 30px 0px;
+}
+
+.topic-outline ul {
+	font-size: 24px;
+}
+
+.topic-outline ul {
+	list-style-type: square;
+}
+
+.topic-outline ul.lead {
+	font-size: 32px;
+}
+
+.topic-outline ul.none {
+	list-style-type: none;
+	padding-left: 12px;
+}
+
+/* styles for section area */
+
+.jumbotron-section {
+	padding: 60px 0px;
+	background-color: #2f7d97 !important;
+}
+
+.jumbotron-section h1 {
+	font-size: 36px;
+	padding-bottom: 20px;
+}
+
+.jumbotron-section p {
+	color: #73bad2;
 }
 
 .nav-item .nav-link {
@@ -61,25 +110,6 @@ body, button, html, input, select, textarea {
 
 .btn:hover {
 	cursor: pointer;
-}
-
-ul.outline {
-	list-style-type: square;
-	font-size: 16px;
-}
-
-ul.lead {
-	font-size: 18px;
-}
-
-ul.none {
-	list-style-type: none;
-	font-size: 16px;
-	padding-left: 12px;
-}
-
-.section-course div {
-	text-align: center;
 }
 
 .section-divider {
@@ -105,10 +135,6 @@ img {
 
 img.hasborder {
 	border: solid 1px #666;
-}
-
-h5.exfor {
-	color: #194bca;
 }
 
 .texti-topic {
