modify home and delete hosptech

--- a/css/home.css
+++ b/css/home.css
@@ -11,7 +11,7 @@ body, button, html, input, select, textarea {
 .jumbotron-home h1 {
 	padding: 15px 20px;
 	font-size: 48px;
-	color: #851818;
+	color: #9f3131;
 }
 
 .jumbotron-home h1 small {
