--- a/static/main.css
+++ b/static/main.css
@@ -55,7 +55,7 @@ body, button, html, input, select, textarea {
 	}
 
     .favs-item h2 {
-        margin-top: 30px;
+        margin: 30px 0 20px;
         font-size: 28px;
         text-align: center;
     }
