--- a/static/main.css
+++ b/static/main.css
@@ -72,6 +72,10 @@ p {
     color: #ca7901;
 }
 
+.page-porn h2.missav {
+    color: #d80e70;
+}
+
 .body-porn a {
     color: #000;
     text-decoration: none;
