--- a/static/main.css
+++ b/static/main.css
@@ -5,7 +5,7 @@
 }
 
 body, button, html, input, select, textarea {
-    font-family: "Microsoft JhengHei";
+    font-family: Roboto;
     background-color: #f1f1f1;
 }
 
@@ -35,7 +35,7 @@ body, button, html, input, select, textarea {
 .jumbotron-misc h1,
 .jumbotron-porn h1 {
     font-weight: bold !important;
-    font-family: Georgia;
+    font-family: Roboto;
 }
 
 h2 {
